5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4369/executions/1734_2508.log
== TEST (2019-05-16 15:36:01) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
while c < n:
	sinal = (-1) ** c
	soma = soma + sinal * 4 / ((i) * (i+1) * (i+2))
	cont = cont + 1
	i = i + 2
pi = pi + soma
print(round(pi, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    while c < n:
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:39:09) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while c < n:
		sinal = (-1) ** c
		soma = soma + sinal * 4 / ((i) * (i+1) * (i+2))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(pi, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while c < n:
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:39:19) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while c < n:
		sinal = (-1) ** c
		soma = soma + sinal * 4 / ((i) * (i+1) * (i+2))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(pi, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while c < n:
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:39:31) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while c < n:
		sinal = (-1) ** c
		soma = soma + sinal * 4 / ((i) * (i+1) * (i+2))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(pi, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    while c < n:
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:39:54) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while cont < n:
		sinal = (-1) ** cont
		soma = soma + sinal * 4 / ((i) * (i+1) * (i+2))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(pi, 8))
	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:40:49) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while cont < n:
		sinal = (-1) ** cont
		soma = soma + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(pi, 8))
	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:41:06) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while cont <= n:
		sinal = (-1) ** cont
		soma = soma + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(pi, 8))
	

-- OUTPUT:
3.14088134
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:43:11) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
soma = 0
if n == 1:
	print(3.0)
else:
	while cont < n:
		sinal = (-1) ** cont
		soma = soma + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i + 2
	pi = pi + soma
	print(round(soma, 8))
	

-- OUTPUT:
0.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:44:54) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
if n == 1:
	print(3.0)
else:
	while cont < n:
		sinal = (-1) ** cont
		pi = pi + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i+ 2
	print(round(soma, 8))
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    print(round(soma, 8))
NameError: name 'soma' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:45:09) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
if n == 1:
	print(3.0)
else:
	while cont < n:
		sinal = (-1) ** cont
		pi = pi + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i+ 2
	print(round(pi, 8))
	

-- OUTPUT:
3.14271284
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:45:36) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
if n == 1:
	print(3.0)
else:
	while cont < n-1:
		sinal = (-1) ** cont
		pi = pi + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i+ 2
	print(round(pi, 8))
	

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 15:46:06) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
if n == 1:
	print(3.0)
else:
	while cont < n-1:
		sinal = (-1) ** cont
		pi = pi + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i+ 2
	print(round(pi, 8))
	

-- OUTPUT:
3.13968254
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 15:47:02) 
-- CODE:
n = int(input("Digite o numero de termos: "))
pi = 3
i = 2
cont = 0
if n == 1:
	print(3.0)
else:
	while cont < n-1:
		sinal = (-1) ** cont
		pi = pi + sinal * ((4) / ((i) * (i+1) * (i+2)))
		cont = cont + 1
		i = i+ 2
	print(round(pi, 8))
	

-- EXECUTION TIME:
0.151084
-- TEST CASE 1:
---- input:
5
---- correct output:
3.13968254
---- user output:
3.13968254
-- TEST CASE 2:
---- input:
22
---- correct output:
3.14161607
---- user output:
3.14161607
-- TEST CASE 3:
---- input:
19
---- correct output:
3.14155633
---- user output:
3.14155633
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
